--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,11 @@ dotenv = "0.15.0"
 
 tracing = { version = "0.1.40", default-features = false }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+[dev-dependencies]
+rand = "0.8.5"
+chrono = "0.4.38"
+clap = { version = "4.5.9", features = ["derive"] }
+
+rsa = { version = "0.9.6", features = ["pem"] }
+rcgen = { version = "0.13.1", features = ["pem", "x509-parser"] }
