--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tokio-rustls = "0.26.0"
 rustls-pemfile = "2.1.2"
 tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
 
+no_verification_derive = { path = "no_verification_derive" }
+
 [dev-dependencies]
 rand = "0.8.5"
 chrono = "0.4.38"
