--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 tokio-rustls = "0.26.0"
 rustls-pemfile = "2.1.2"
-tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
+
+parking_lot = "0.12.3"
+tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
 
 no_verification_derive = { path = "no_verification_derive" }
 
